# lhef-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  Changelog.md  README.md
src/: generic.rs  helac.rs  lib.rs  nom_util.rs  plain.rs  string.rs
tests/real_world_files/: helac_1loop_tree.lhe  helac_1loop_tree_plain.json  helac_1loop_tree_string.json  helac_1loop_virt.json  helac_1loop_virt.lhe  helac_1loop_virt_plain.json  helac_1loop_virt_string.json  helac_dipoles_i.json  helac_dipoles_i.lhe  helac_dipoles_i_plain.json  helac_dipoles_i_string.json  helac_dipoles_kp.json  helac_dipoles_kp.lhe  helac_dipoles_kp_plain.json  helac_dipoles_kp_string.json  helac_dipoles_rs.json  helac_dipoles_rs.lhe  helac_dipoles_rs_plain.json  helac_dipoles_rs_string.json  mg5_aMC.lhe  mg5_aMC_NLO.lhe  mg5_aMC_NLO_plain.json  mg5_aMC_NLO_rwgt.lhe  mg5_aMC_NLO_rwgt_plain.json  mg5_aMC_NLO_rwgt_string.json  mg5_aMC_NLO_string.json  mg5_aMC_plain.json  mg5_aMC_string.json
